A_03-Parser/parser.output
   0  $accept : %entry% $end

   1  program : exp EOF

   2  exp : INT
   3      | NIL
   4      | STRING
   5      | sequence
   6      | id LBRACK exp RBRACK OF exp
   7      | id LBRACE field_values RBRACE
   8      | lvalue
   9      | lvalue ASSIGN exp
  10      | id LPAREN funcargs RPAREN
  11      | MINUS exp
  12      | exp PLUS exp
  13      | exp MINUS exp
  14      | exp TIMES exp
  15      | exp DIVIDE exp
  16      | exp EQ exp
  17      | exp NEQ exp
  18      | exp LT exp
  19      | exp LE exp
  20      | exp GT exp
  21      | exp GE exp
  22      | exp AND exp
  23      | exp OR exp
  24      | IF exp THEN exp ELSE exp
  25      | IF exp THEN exp
  26      | WHILE exp DO exp
  27      | FOR id ASSIGN exp TO exp DO exp
  28      | BREAK
  29      | LET decs IN sequenceExp END
  30      | LET decs IN exp END
  31      | LPAREN exp RPAREN
  32      | LPAREN RPAREN

  33  arrexp : id LBRACK exp RBRACK OF exp

  34  subscrivar : lvalue LBRACK exp RBRACK

  35  id : ID

  36  field_values :
  37               | id EQ exp
  38               | id EQ exp COMMA field_values

  39  lvalue : id
  40         | lvalue_not_id

  41  lvalue_not_id : lvalue DOT id
  42                | id LBRACK exp RBRACK
  43                | lvalue_not_id LBRACK exp RBRACK

  44  field : id COLON id

  45  fields :
  46         | field fields_rest

  47  fields_rest :
  48              | COMMA field fields_rest

  49  funcargs :
  50           | exp
  51           | exp COMMA funcargs_rest

  52  funcargs_rest : exp
  53                | exp COMMA funcargs_rest

  54  sequence : LPAREN sequenceExp RPAREN

  55  sequenceExp : exp seqtail

  56  seqtail :
  57          | SEMICOLON exp seqtail

  58  fundec : FUNCTION id LPAREN fields RPAREN EQ exp
  59         | FUNCTION id LPAREN fields RPAREN COLON id EQ exp

  60  vardec : VAR id ASSIGN exp
  61         | VAR id COLON id ASSIGN exp

  62  typedec : TYPE id EQ ty

  63  ty : id
  64     | LBRACE fields RBRACE
  65     | ARRAY OF id

  66  decs : vardecslist
  67       | fundecslist
  68       | typedecslist

  69  vardecslist : vardec
  70              | vardec vardecslist
  71              | vardec typedecslist
  72              | vardec fundecslist

  73  typedecslist : mutualtypedecs
  74               | mutualtypedecs typedecslist
  75               | mutualtypedecs vardecslist
  76               | mutualtypedecs fundecslist

  77  fundecslist : mutualfundecs
  78              | mutualfundecs fundecslist
  79              | mutualfundecs vardecslist
  80              | mutualfundecs typedecslist

  81  mutualtypedecs : typedecs

  82  mutualfundecs : fundecs

  83  fundecs : fundec fundecs
  84          | fundec

  85  typedecs : typedec typedecs
  86           | typedec

  87  expseq_rest : SEMICOLON exp
  88              | SEMICOLON exp expseq_rest

  89  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (89)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 14
	program  goto 15
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	exp : INT .  (2)

	.  reduce 2


state 4
	exp : STRING .  (4)

	.  reduce 4


state 5
	id : ID .  (35)

	.  reduce 35


state 6
	exp : FOR . id ASSIGN exp TO exp DO exp  (27)

	ID  shift 5
	.  error

	id  goto 20


state 7
	exp : WHILE . exp DO exp  (26)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 21
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 8
	exp : BREAK .  (28)

	.  reduce 28


state 9
	exp : LET . decs IN sequenceExp END  (29)
	exp : LET . decs IN exp END  (30)

	FUNCTION  shift 22
	VAR  shift 23
	TYPE  shift 24
	.  error

	fundec  goto 25
	typedec  goto 26
	decs  goto 27
	vardec  goto 28
	vardecslist  goto 29
	fundecslist  goto 30
	typedecslist  goto 31
	mutualtypedecs  goto 32
	mutualfundecs  goto 33
	typedecs  goto 34
	fundecs  goto 35


state 10
	exp : NIL .  (3)

	.  reduce 3


state 11
	exp : IF . exp THEN exp ELSE exp  (24)
	exp : IF . exp THEN exp  (25)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 36
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 12
	exp : LPAREN . exp RPAREN  (31)
	exp : LPAREN . RPAREN  (32)
	sequence : LPAREN . sequenceExp RPAREN  (54)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	RPAREN  shift 37
	MINUS  shift 13
	.  error

	exp  goto 38
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	sequenceExp  goto 39
	lvalue_not_id  goto 19


state 13
	exp : MINUS . exp  (11)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 40
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 14
	program : exp . EOF  (1)
	exp : exp . PLUS exp  (12)
	exp : exp . MINUS exp  (13)
	exp : exp . TIMES exp  (14)
	exp : exp . DIVIDE exp  (15)
	exp : exp . EQ exp  (16)
	exp : exp . NEQ exp  (17)
	exp : exp . LT exp  (18)
	exp : exp . LE exp  (19)
	exp : exp . GT exp  (20)
	exp : exp . GE exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)

	PLUS  shift 41
	MINUS  shift 42
	TIMES  shift 43
	DIVIDE  shift 44
	EQ  shift 45
	NEQ  shift 46
	LT  shift 47
	LE  shift 48
	GT  shift 49
	GE  shift 50
	AND  shift 51
	OR  shift 52
	EOF  shift 53
	.  error


state 15
	%entry% : '\001' program .  (89)

	.  reduce 89


state 16
	exp : sequence .  (5)

	.  reduce 5


state 17
	exp : id . LBRACK exp RBRACK OF exp  (6)
	exp : id . LBRACE field_values RBRACE  (7)
	exp : id . LPAREN funcargs RPAREN  (10)
	lvalue : id .  (39)
	lvalue_not_id : id . LBRACK exp RBRACK  (42)

	LPAREN  shift 54
	LBRACK  shift 55
	LBRACE  shift 56
	IN  reduce 39
	TO  reduce 39
	END  reduce 39
	FUNCTION  reduce 39
	VAR  reduce 39
	TYPE  reduce 39
	THEN  reduce 39
	ELSE  reduce 39
	DO  reduce 39
	RPAREN  reduce 39
	RBRACK  reduce 39
	RBRACE  reduce 39
	DOT  reduce 39
	COMMA  reduce 39
	SEMICOLON  reduce 39
	PLUS  reduce 39
	MINUS  reduce 39
	TIMES  reduce 39
	DIVIDE  reduce 39
	EQ  reduce 39
	NEQ  reduce 39
	LT  reduce 39
	LE  reduce 39
	GT  reduce 39
	GE  reduce 39
	AND  reduce 39
	OR  reduce 39
	ASSIGN  reduce 39
	EOF  reduce 39


state 18
	exp : lvalue .  (8)
	exp : lvalue . ASSIGN exp  (9)
	lvalue_not_id : lvalue . DOT id  (41)

	DOT  shift 57
	ASSIGN  shift 58
	IN  reduce 8
	TO  reduce 8
	END  reduce 8
	FUNCTION  reduce 8
	VAR  reduce 8
	TYPE  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	DO  reduce 8
	RPAREN  reduce 8
	RBRACK  reduce 8
	RBRACE  reduce 8
	COMMA  reduce 8
	SEMICOLON  reduce 8
	PLUS  reduce 8
	MINUS  reduce 8
	TIMES  reduce 8
	DIVIDE  reduce 8
	EQ  reduce 8
	NEQ  reduce 8
	LT  reduce 8
	LE  reduce 8
	GT  reduce 8
	GE  reduce 8
	AND  reduce 8
	OR  reduce 8
	EOF  reduce 8


state 19
	lvalue : lvalue_not_id .  (40)
	lvalue_not_id : lvalue_not_id . LBRACK exp RBRACK  (43)

	LBRACK  shift 59
	IN  reduce 40
	TO  reduce 40
	END  reduce 40
	FUNCTION  reduce 40
	VAR  reduce 40
	TYPE  reduce 40
	THEN  reduce 40
	ELSE  reduce 40
	DO  reduce 40
	RPAREN  reduce 40
	RBRACK  reduce 40
	RBRACE  reduce 40
	DOT  reduce 40
	COMMA  reduce 40
	SEMICOLON  reduce 40
	PLUS  reduce 40
	MINUS  reduce 40
	TIMES  reduce 40
	DIVIDE  reduce 40
	EQ  reduce 40
	NEQ  reduce 40
	LT  reduce 40
	LE  reduce 40
	GT  reduce 40
	GE  reduce 40
	AND  reduce 40
	OR  reduce 40
	ASSIGN  reduce 40
	EOF  reduce 40


state 20
	exp : FOR id . ASSIGN exp TO exp DO exp  (27)

	ASSIGN  shift 60
	.  error


state 21
	exp : exp . PLUS exp  (12)
	exp : exp . MINUS exp  (13)
	exp : exp . TIMES exp  (14)
	exp : exp . DIVIDE exp  (15)
	exp : exp . EQ exp  (16)
	exp : exp . NEQ exp  (17)
	exp : exp . LT exp  (18)
	exp : exp . LE exp  (19)
	exp : exp . GT exp  (20)
	exp : exp . GE exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)
	exp : WHILE exp . DO exp  (26)

	DO  shift 61
	PLUS  shift 41
	MINUS  shift 42
	TIMES  shift 43
	DIVIDE  shift 44
	EQ  shift 45
	NEQ  shift 46
	LT  shift 47
	LE  shift 48
	GT  shift 49
	GE  shift 50
	AND  shift 51
	OR  shift 52
	.  error


state 22
	fundec : FUNCTION . id LPAREN fields RPAREN EQ exp  (58)
	fundec : FUNCTION . id LPAREN fields RPAREN COLON id EQ exp  (59)

	ID  shift 5
	.  error

	id  goto 62


state 23
	vardec : VAR . id ASSIGN exp  (60)
	vardec : VAR . id COLON id ASSIGN exp  (61)

	ID  shift 5
	.  error

	id  goto 63


state 24
	typedec : TYPE . id EQ ty  (62)

	ID  shift 5
	.  error

	id  goto 64


25: shift/reduce conflict (shift 22, reduce 84) on FUNCTION
state 25
	fundecs : fundec . fundecs  (83)
	fundecs : fundec .  (84)

	FUNCTION  shift 22
	IN  reduce 84
	VAR  reduce 84
	TYPE  reduce 84

	fundec  goto 25
	fundecs  goto 65


26: shift/reduce conflict (shift 24, reduce 86) on TYPE
state 26
	typedecs : typedec . typedecs  (85)
	typedecs : typedec .  (86)

	TYPE  shift 24
	IN  reduce 86
	FUNCTION  reduce 86
	VAR  reduce 86

	typedec  goto 26
	typedecs  goto 66


state 27
	exp : LET decs . IN sequenceExp END  (29)
	exp : LET decs . IN exp END  (30)

	IN  shift 67
	.  error


state 28
	vardecslist : vardec .  (69)
	vardecslist : vardec . vardecslist  (70)
	vardecslist : vardec . typedecslist  (71)
	vardecslist : vardec . fundecslist  (72)

	FUNCTION  shift 22
	VAR  shift 23
	TYPE  shift 24
	IN  reduce 69

	fundec  goto 25
	typedec  goto 26
	vardec  goto 28
	vardecslist  goto 68
	fundecslist  goto 69
	typedecslist  goto 70
	mutualtypedecs  goto 32
	mutualfundecs  goto 33
	typedecs  goto 34
	fundecs  goto 35


state 29
	decs : vardecslist .  (66)

	.  reduce 66


state 30
	decs : fundecslist .  (67)

	.  reduce 67


state 31
	decs : typedecslist .  (68)

	.  reduce 68


state 32
	typedecslist : mutualtypedecs .  (73)
	typedecslist : mutualtypedecs . typedecslist  (74)
	typedecslist : mutualtypedecs . vardecslist  (75)
	typedecslist : mutualtypedecs . fundecslist  (76)

	FUNCTION  shift 22
	VAR  shift 23
	TYPE  shift 24
	IN  reduce 73

	fundec  goto 25
	typedec  goto 26
	vardec  goto 28
	vardecslist  goto 71
	fundecslist  goto 72
	typedecslist  goto 73
	mutualtypedecs  goto 32
	mutualfundecs  goto 33
	typedecs  goto 34
	fundecs  goto 35


state 33
	fundecslist : mutualfundecs .  (77)
	fundecslist : mutualfundecs . fundecslist  (78)
	fundecslist : mutualfundecs . vardecslist  (79)
	fundecslist : mutualfundecs . typedecslist  (80)

	FUNCTION  shift 22
	VAR  shift 23
	TYPE  shift 24
	IN  reduce 77

	fundec  goto 25
	typedec  goto 26
	vardec  goto 28
	vardecslist  goto 74
	fundecslist  goto 75
	typedecslist  goto 76
	mutualtypedecs  goto 32
	mutualfundecs  goto 33
	typedecs  goto 34
	fundecs  goto 35


state 34
	mutualtypedecs : typedecs .  (81)

	.  reduce 81


state 35
	mutualfundecs : fundecs .  (82)

	.  reduce 82


state 36
	exp : exp . PLUS exp  (12)
	exp : exp . MINUS exp  (13)
	exp : exp . TIMES exp  (14)
	exp : exp . DIVIDE exp  (15)
	exp : exp . EQ exp  (16)
	exp : exp . NEQ exp  (17)
	exp : exp . LT exp  (18)
	exp : exp . LE exp  (19)
	exp : exp . GT exp  (20)
	exp : exp . GE exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)
	exp : IF exp . THEN exp ELSE exp  (24)
	exp : IF exp . THEN exp  (25)

	THEN  shift 77
	PLUS  shift 41
	MINUS  shift 42
	TIMES  shift 43
	DIVIDE  shift 44
	EQ  shift 45
	NEQ  shift 46
	LT  shift 47
	LE  shift 48
	GT  shift 49
	GE  shift 50
	AND  shift 51
	OR  shift 52
	.  error


state 37
	exp : LPAREN RPAREN .  (32)

	.  reduce 32


38: shift/reduce conflict (shift 78, reduce 56) on RPAREN
state 38
	exp : exp . PLUS exp  (12)
	exp : exp . MINUS exp  (13)
	exp : exp . TIMES exp  (14)
	exp : exp . DIVIDE exp  (15)
	exp : exp . EQ exp  (16)
	exp : exp . NEQ exp  (17)
	exp : exp . LT exp  (18)
	exp : exp . LE exp  (19)
	exp : exp . GT exp  (20)
	exp : exp . GE exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)
	exp : LPAREN exp . RPAREN  (31)
	sequenceExp : exp . seqtail  (55)
	seqtail : .  (56)

	RPAREN  shift 78
	SEMICOLON  shift 79
	PLUS  shift 41
	MINUS  shift 42
	TIMES  shift 43
	DIVIDE  shift 44
	EQ  shift 45
	NEQ  shift 46
	LT  shift 47
	LE  shift 48
	GT  shift 49
	GE  shift 50
	AND  shift 51
	OR  shift 52

	seqtail  goto 80


state 39
	sequence : LPAREN sequenceExp . RPAREN  (54)

	RPAREN  shift 81
	.  error


state 40
	exp : MINUS exp .  (11)
	exp : exp . PLUS exp  (12)
	exp : exp . MINUS exp  (13)
	exp : exp . TIMES exp  (14)
	exp : exp . DIVIDE exp  (15)
	exp : exp . EQ exp  (16)
	exp : exp . NEQ exp  (17)
	exp : exp . LT exp  (18)
	exp : exp . LE exp  (19)
	exp : exp . GT exp  (20)
	exp : exp . GE exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)

	.  reduce 11


state 41
	exp : exp PLUS . exp  (12)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 82
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 42
	exp : exp MINUS . exp  (13)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 83
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 43
	exp : exp TIMES . exp  (14)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 84
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 44
	exp : exp DIVIDE . exp  (15)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 85
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 45
	exp : exp EQ . exp  (16)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 86
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 46
	exp : exp NEQ . exp  (17)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 87
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 47
	exp : exp LT . exp  (18)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 88
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 48
	exp : exp LE . exp  (19)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 89
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 49
	exp : exp GT . exp  (20)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 90
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 50
	exp : exp GE . exp  (21)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 91
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 51
	exp : exp AND . exp  (22)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 92
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 52
	exp : exp OR . exp  (23)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	.  error

	exp  goto 93
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	lvalue_not_id  goto 19


state 53
	program : exp EOF .  (1)

	.  reduce 1


state 54
	exp : id LPAREN . funcargs RPAREN  (10)
	funcargs : .  (49)

	INT  shift 3
	STRING  shift 4
	ID  shift 5
	FOR  shift 6
	WHILE  shift 7
	BREAK  shift 8
	LET  shift 9
	NIL  shift 10
	IF  shift 11
	LPAREN  shift 12
	MINUS  shift 13
	RPAREN  reduce 49

	exp  goto 94
	sequence  goto 16
	id  goto 17
	lvalue  goto 18
	funcargs  goto 95
	lvalue_not_id  goto 19


state 55
	exp : id LBRACK . exp RBRACK OF exp  (6)
	lvalue_not_id : id LBRACK . exp RBRACK  (42)
